# mexc

./: .gitignore  README.md  mkdocs.yml  requirements.txt  zensical.toml
docs/: Justfile  (+11 more)
mexc/: Justfile  README.md  pyproject.toml
mexc/src/mexc/: __init__.py  __init__.pyi  _mexc.py
mexc/src/mexc/api/: __init__.pyi  _api.py
mexc/src/mexc/api/futures/: __init__.pyi  _futures.py
mexc/src/mexc/api/spot/: __init__.pyi  _spot.py
mexc/src/mexc/api/wallet/: __init__.pyi  _wallet.py  cancel_withdraw.py  currency_info.py  deposit_addresses.py  withdraw.py
mexc/src/mexc/api/ws/: __init__.pyi  _ws.py  client.py  user_client.py
mexc/src/mexc/core/: __init__.pyi  auth.py  client.py  errors.py  exc.py  types.py  ui.py  util.py  validation.py
mexc/src/mexc/core/http/: __init__.pyi  auth.py  client.py
mexc/src/mexc/core/ws/: __init__.py  __init__.pyi  base.py  multiplex_rpc.py  serial_rpc.py  streams.py  streams_rpc.py
mexc/src/mexc/futures/: __init__.pyi  _futures.py  util.py
mexc/src/mexc/futures/core/: __init__.pyi  auth.py  util.py
mexc/src/mexc/futures/market_data/: __init__.pyi  _market_data.py  candles.py  contract_info.py  funding_rate.py  funding_rate_history.py
mexc/src/mexc/futures/streams/: __init__.pyi  _streams.py
mexc/src/mexc/futures/trading/: __init__.pyi  _trading.py
mexc/src/mexc/futures/user_data/: __init__.pyi  _user_data.py  funding_rate_history.py  my_funding_history.py  my_trades.py  positions.py
mexc/src/mexc/sdk/: __init__.pyi  _sdk.py  mixin.py  trading.py  user_data.py  util.py
mexc/src/mexc/sdk/core/: __init__.pyi  exc.py  mixin.py  parsing.py
mexc/src/mexc/sdk/futures/: __init__.pyi  _futures.py
mexc/src/mexc/sdk/reporting/: snapshots.py
mexc/src/mexc/sdk/spot/: __init__.pyi  _spot.py
mexc/src/mexc/sdk/stream/: __init__.py  depth.py  my_trades.py
mexc/src/mexc/sdk/streams/: __init__.pyi  _streams.py  depth.py  my_trades.py
mexc/src/mexc/sdk/wallet/: __init__.pyi  _wallet.py  deposit_history.py  withdrawal_history.py  withdrawal_methods.py
mexc/src/mexc/spot/: __init__.pyi  _spot.py  util.py
mexc/src/mexc/spot/core/: __init__.pyi  auth.py  util.py
mexc/src/mexc/spot/market_data/: __init__.pyi  _market_data.py  agg_trades.py  candles.py  depth.py  exchange_info.py  time.py  trades.py
mexc/src/mexc/spot/streams/: __init__.pyi  _streams.py
mexc/src/mexc/spot/trading/: cancel_all_orders.py  cancel_order.py  place_order.py
mexc/src/mexc/spot/user_data/: _user_data.py  account.py  my_orders.py  my_trades.py  open_orders.py  query_order.py
pkg/: Justfile  pyproject.toml
pkg/src/mexc/: __init__.py
pkg/src/mexc/core/: __init__.pyi  exc.py  types.py  util.py
pkg/src/mexc/futures/: __init__.py  __init__.pyi  _futures.py
pkg/src/mexc/spot/: __init__.py
(+363 files in other folders)
