[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexc-trading-sdk"
version = "0.1.8"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "The unofficial MEXC API SDK, by Tribulnation. Compatible with Trading SDK."
dependencies = [
  "lazy-loader", "httpx", "pydantic", "protobuf==3.20", "websockets",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/tribulnation/mexc.git"

[project.optional-dependencies]
sdk = ["trading-sdk"]
orjson = ["orjson"]
